Ajustes com os novos dados para monitorar

--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,26 +1,30 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
-repo: upptime # The name of this repository
+owner: FelipoAntonoff # Your GitHub organization or username, where this repository lives
+repo: uptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Codemarket - Loja
+    url: https://www.codemarket.com.br/
+  - name: Codemarket Docs - Site
+    url: https://docs.codemarket.com.br/
+  - name: Felipo Antonoff - Site
+    url: https://felipoantonoff.com/
+  - name: Infinite Cloud - Hospedagem
+    url: http://bit.ly/HospedagemInfiniteCloud
+  - name: Digital Ocean - Infra
+    url: https://www.digitalocean.com/
+  - name: Amazon AWS - Infra
+    url: https://aws.amazon.com/pt/?nc2=h_lg
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  #cname: demo.upptime.js.org
+  baseUrl: /uptime
+  logoUrl: https://cdn.codemarket.com.br/front/assets/img/logo.png
+  name: Codemarket Uptime
+  introTitle: "**Codemarket Uptime** é uma página de Status dos Serviços e APIs da Codemarket"
+  introMessage: Segue nosso site da [Codemarket](https://www.codemarket.com.br/)
   navbar:
     - title: Status
       href: /
